Migrate to plugin framework
The `terraform-plugin-framework` is the successor of the Terraform
plugion SDK. This patch migrates the provider to use it.

Signed-off-by: Juan Hernandez <juan.hernandez@redhat.com>

--- a/.github/workflows/check-pull-request.yaml
+++ b/.github/workflows/check-pull-request.yaml
@@ -35,6 +35,8 @@ jobs:
     steps:
     - name: Checkout the source
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Setup Go
       uses: actions/setup-go@v2
