--- a/.github/workflows/check-pull-request.yaml
+++ b/.github/workflows/check-pull-request.yaml
@@ -44,7 +44,7 @@ jobs:
         go-version: 1.17
 
     - name: Setup Ginkgo
-      run: go install github.com/onsi/ginkgo/ginkgo@v1.16.4
+      run: go install github.com/onsi/ginkgo/v2/ginkgo@v2.0.0
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
