--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -38,9 +38,9 @@ jobs:
     - name: Import GPG key
       id: import_gpg_key
       uses: crazy-max/ghaction-import-gpg@v5.0.0
-      env:
-        GPG_PRIVATE_KEY: ${{ secrets.RELEASER_GPG_PRIVATE_KEY }}
-        PASSPHRASE: ${{ secrets.RELEASER_GPG_PASSPHRASE }}
+      with:
+        gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+        passphrase: ${{ secrets.GPG_PASSPHRASE }}
 
     - name: Run releaser
       uses: goreleaser/goreleaser-action@v2.8.0
