--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -37,10 +37,10 @@ jobs:
 
     - name: Import GPG key
       id: import_gpg_key
-      uses: crazy-max/ghaction-import-gpg@v5.0.0
-      with:
-        gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-        passphrase: ${{ secrets.GPG_PASSPHRASE }}
+      uses: hashicorp/ghaction-import-gpg@v2.1.0
+      env:
+        GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+        PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
     - name: Run releaser
       uses: goreleaser/goreleaser-action@v2.8.0
