--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -28,22 +28,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout the source
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Setup Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
-        go-version: 1.17
+        go-version-file: 'go.mod'
+        cache: true
 
     - name: Import GPG key
-      id: import_gpg_key
-      uses: hashicorp/ghaction-import-gpg@v2.1.0
-      env:
-        GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-        PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+      uses: crazy-max/ghaction-import-gpg@v5
+      id: import_gpg
+      with:
+        gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
 
     - name: Run releaser
-      uses: goreleaser/goreleaser-action@v2.8.0
+      uses: goreleaser/goreleaser-action@v3.0.0
       with:
         version: latest
         args: release --rm-dist
