--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -30,6 +30,9 @@ jobs:
     - name: Checkout the source
       uses: actions/checkout@v3
 
+    - name: Unshallow
+      run: git fetch --prune --unshallow
+
     - name: Setup Go
       uses: actions/setup-go@v3
       with:
@@ -41,7 +44,7 @@ jobs:
       id: import_gpg
       with:
         gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-        passphrase: ${{ secrets.PASSPHRASE }}
+        passphrase: ${{ secrets.GPG_PASSPHRASE }}
 
     - name: Run releaser
       uses: goreleaser/goreleaser-action@v3.0.0
