--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -39,8 +39,8 @@ jobs:
       id: import_gpg_key
       uses: crazy-max/ghaction-import-gpg@v5.0.0
       with:
-        gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-        passphrase: ${{ secrets.GPG_PASSPHRASE }}
+        gpg_private_key: ${{ secrets.RELEASER_GPG_PRIVATE_KEY }}
+        passphrase: ${{ secrets.RELEASER_GPG_PASSPHRASE }}
 
     - name: Run releaser
       uses: goreleaser/goreleaser-action@v2.8.0
