--- a/.github/workflows/check-pull-request.yaml
+++ b/.github/workflows/check-pull-request.yaml
@@ -47,9 +47,10 @@ jobs:
       run: go install github.com/onsi/ginkgo/v2/ginkgo@v2.1.1
 
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
+      uses: hashicorp/setup-terraform@v2
       with:
         terraform_wrapper: false
+        terraform_version: 1.5.7
 
     - name: Run the tests
       run: make tests
