OCM-5422: Adding a validation for each PR
Signed-off-by: Danielle Barda <dbarda@redhat.com>

--- a/.github/workflows/check-pull-request.yaml
+++ b/.github/workflows/check-pull-request.yaml
@@ -22,6 +22,17 @@ on:
     - main
 
 jobs:
+  check-commit-messages:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Go
+        uses: actions/setup-go@v4
+        with:
+          go-version-file: go.mod
+      - name: Check that 'make generate' has being call
+        run: make check-commits
+
   check-gen:
     runs-on: ubuntu-latest
     steps:
