Add github release task

--- a/.tekton/terraform-provider-rhcs-tests-push.yaml
+++ b/.tekton/terraform-provider-rhcs-tests-push.yaml
@@ -364,6 +364,77 @@ spec:
         operator: in
         values:
         - "false"
+
+    - name: prepare-release
+      params:
+      - name: IMAGE_URL
+        value: $(tasks.build-container.results.IMAGE_URL)
+      - name: IMAGE_DIGEST
+        value: $(tasks.build-container.results.IMAGE_DIGEST)
+      - name: version
+        value: 1.0
+      - name: release-notes
+        type: string
+      - name: branch
+        type: string
+      - name: repo
+        value: enriquebelarte/terraform-provider-rhcs-tests
+      - name: rel_ver
+        value: 1.0
+      runAfter:
+      - build-container
+      taskRef:
+        params:
+        - name: name
+          value: prepare-release
+        - name: kind
+          value: task
+        resolver: git
+      when:
+      - input: $(params.skip-checks)    #This references the pipeline parameters
+        operator: in
+        values:
+        - "false"
+      workspaces:
+      - name: releases
+        workspace: workspace
+
+
+    - name: github-upload-release
+      params:
+      - name: IMAGE_URL
+        value: $(tasks.build-container.results.IMAGE_URL)
+      - name: IMAGE_DIGEST
+        value: $(tasks.build-container.results.IMAGE_DIGEST)
+      - name: version
+        value: 1.0
+      - name: release-notes
+        value: "Release notes for $(params.rel_ver)"
+      - name: branch
+        type: string
+      - name: repo
+        value: enriquebelarte/terraform-provider-rhcs-tests
+      - name: rel_ver
+        value: 1.0
+      runAfter:
+      - prepare-release
+      taskRef:
+        params:
+        - name: name
+          value: github-upload-release
+        - name: kind
+          value: task
+        resolver: git 
+      when:
+      - input: $(params.skip-checks)    #This references the pipeline parameters
+        operator: in
+        values:
+        - "false"
+      workspaces:
+      - name: gh-upload
+        workspace: workspace
+
+
     workspaces:
     - name: workspace
     - name: git-auth
