--- a/.github/workflows/check-commit-format.yml
+++ b/.github/workflows/check-commit-format.yml
@@ -28,8 +28,10 @@ jobs:
           # Lists of GitHub users for whom the commit validation should be skipped:
           # * red-hat-konflux[bot] - automatic bot responsible for any change related to
           #   RHTAP integration (changes in https://github.com/terraform-redhat/terraform-provider-rhcs/blob/main/.tekton/terraform-provider-rhcs-push.yaml)
+          # * dependabot[bot] - bot responsible for merging dependecies updates
           declare -a skip_pr_authors=(
             "red-hat-konflux[bot]"
+            "dependabot[bot]"
           )
           echo "The PR Author is \"${PR_AUTHOR}\""
           for skip_pr_author in "${skip_pr_authors[@]}"
