--- a/tests/ci/profiles/tf_hcp_cluster_profiles.yml
+++ b/tests/ci/profiles/tf_hcp_cluster_profiles.yml
@@ -7,10 +7,8 @@ profiles:
     product_id: "rosa"
     cloud_provider: "aws"
     region: "us-west-2"
-    ccs: true
     sts: true
     byovpc: true
-    private_link: false # Kept to match with classic
     private: false
     etcd_encryption: true
     kms_key_arn: true
@@ -26,40 +24,37 @@ profiles:
     tagging: true
     channel_group: candidate
     zones: "a,b,c"
-    ec2_metadata_http_tokens: ""
     oidc_config: "managed"
     admin_enabled: false # Not yet supported
+    unified_acc_role_path: ""
 # rosa-hcp-sts-pl :: creating a managed oidc config cluster 
-# - as: rosa-sts-pl
-#   cluster:
-#     cluster_type: rosa-hcp
-#     multi_az: false
-#     product_id: "rosa"
-#     cloud_provider: "aws"
-#     region: "us-east-1"
-#     ccs: true
-#     sts: true
-#     byovpc: true
-#     private_link: true # Kept to match with classic
-#     private: true
-#     etcd_encryption: false
-#     kms_key_arn: false
-#     fips: false
-#     autoscale: false
-#     byok: false
-#     version_pattern: "latest"
-#     version: ""
-#     major_version: "4.14"
-#     compute_machine_type: "m5.xlarge"
-#     proxy: false
-#     labeling: false # not yet supported
-#     tagging: false
-#     channel_group: candidate
-#     zones: ""
-#     ec2_metadata_http_tokens: "optional"
-#     oidc_config: "managed"
-#     admin_enabled: false # Not yet supported
-#     unified_acc_role_path: ""
+- as: rosa-hcp-pl
+  cluster:
+    cluster_type: rosa-hcp
+    multi_az: true
+    product_id: "rosa"
+    cloud_provider: "aws"
+    region: "us-west-2"
+    sts: true
+    byovpc: true
+    private: true
+    etcd_encryption: false
+    kms_key_arn: false
+    fips: false
+    autoscale: false
+    byok: false
+    version_pattern: "latest"
+    version: ""
+    major_version: "4.14"
+    compute_machine_type: "m5.xlarge"
+    proxy: false
+    labeling: false # not yet supported
+    tagging: false
+    channel_group: candidate
+    zones: ""
+    oidc_config: "un-managed"
+    admin_enabled: false # Not yet supported
+    unified_acc_role_path: ""
 # # rosa-up-y :: creating a cluster for y-stream upgrade purpose
 # - as: rosa-up-y
 #   cluster:
