--- a/tests/ci/profiles/tf_classic_cluster_profiles.yml
+++ b/tests/ci/profiles/tf_classic_cluster_profiles.yml
@@ -63,6 +63,40 @@ profiles:
     additional_sg_number: 4
     worker_disk_size: 200
     unified_acc_role_path: "/unified/"
+# rosa-sts-sv :: creating Shared-VPC cluster.
+- as: rosa-sts-sv
+  cluster:
+    cluster_type: rosa-classic
+    multi_az: true
+    product_id: "rosa"
+    cloud_provider: "aws"
+    region: "us-east-1"
+    ccs: true
+    sts: true
+    byovpc: true
+    private_link: false
+    private: false
+    etcd_encryption: false
+    kms_key_arn: false
+    fips: false
+    autoscale: true
+    byok: false
+    version_pattern: "latest"
+    version: ""
+    major_version: "4.14"
+    compute_machine_type: "m5.2xlarge"
+    proxy: false
+    labeling: true
+    tagging: true
+    channel_group: candidate
+    zones: ""
+    imdsv2: "required"
+    oidc_config: "managed"
+    admin_enabled: true
+    additional_sg_number: 0
+    worker_disk_size: 200
+    unified_acc_role_path: "/"
+    shared_vpc: true
 # rosa-up-y :: creating a cluster for y-stream upgrade purpose
 - as: rosa-up-y
   cluster:
