--- a/tests/ci/profiles/tf_hcp_cluster_profiles.yml
+++ b/tests/ci/profiles/tf_hcp_cluster_profiles.yml
@@ -1,5 +1,4 @@
 profiles:
-# rosa-hcp-ad :: creating unmanaged oidc config cluster 
 - as: rosa-hcp-ad
   cluster:
     cluster_type: rosa-hcp
@@ -28,7 +27,7 @@ profiles:
     oidc_config: "managed" # id:72492
     admin_enabled: false # Not yet supported
     unified_acc_role_path: "/advanced/" # id:72495
-# rosa-hcp-sts-pl :: creating a managed oidc config cluster 
+
 - as: rosa-hcp-pl
   cluster:
     cluster_type: rosa-hcp
@@ -58,66 +57,66 @@ profiles:
     unified_acc_role_path: ""
 
 # Upgrade profiles
-# # rosa-up-y :: creating a cluster for y-stream upgrade purpose
-# - as: rosa-up-y
-#   cluster:
-#     cluster_type: rosa-hcp
-#     multi_az: false
-#     product_id: "rosa"
-#     cloud_provider: "aws"
-#     region: "us-west-2"
-#     ccs: true
-#     sts: true
-#     byovpc: false
-#     private_link: false # Kept to match with classic
-#     private: false
-#     etcd_encryption: true
-#     kms_key_arn: false
-#     fips: false
-#     autoscale: false
-#     byok: true
-#     version_pattern: "y-1"
-#     version: ""
-#     major_version: "4.14"
-#     compute_machine_type: "m5.xlarge" # id:72448
-#     proxy: false
-#     labeling: false # not yet supported
-#     tagging: true
-#     channel_group: stable
-#     zones: "" # id:72456
-#     ec2_metadata_http_tokens: ""
-#     oidc_config: "managed"
-#     admin_enabled: false # Not yet supported
-#     unified_acc_role_path: "/uni-fied/"
-# # rosa-up-z :: creating a cluster for z-stream upgrade purpose
-# - as: rosa-up-z
-#   cluster:
-#     cluster_type: rosa-hcp
-#     multi_az: true
-#     product_id: "rosa"
-#     cloud_provider: "aws"
-#     region: "ap-northeast-1"
-#     ccs: true
-#     sts: true
-#     byovpc: false
-#     private_link: false # Kept to match with classic
-#     private: false
-#     etcd_encryption: true
-#     kms_key_arn: false
-#     fips: false
-#     autoscale: false
-#     byok: true
-#     version_pattern: "z-1"
-#     version: ""
-#     major_version: "4.14"
-#     compute_machine_type: "m5.xlarge" # id:72448
-#     proxy: false
-#     labeling: false # not yet supported
-#     tagging: false
-#     channel_group: stable
-#     zones: "" # id:72456
-#     ec2_metadata_http_tokens: ""
-#     oidc_config: "managed"
-#     admin_enabled: false # Not yet supported
-#     unified_acc_role_path: ""
+# rosa-up-y :: creating a cluster for y-stream upgrade purpose
+- as: rosa-hcp-up-y # id:72474
+  cluster:
+    cluster_type: rosa-hcp
+    multi_az: true
+    product_id: "rosa"
+    cloud_provider: "aws"
+    region: "us-west-2"
+    ccs: true
+    sts: true
+    byovpc: true
+    private_link: false # Kept to match with classic
+    private: false
+    etcd_encryption: true # id:72483 # id:72807
+    kms_key_arn: true # id:72483 # id:72484 # id:72807
+    fips: false
+    autoscale: false
+    byok: true
+    version_pattern: "y-1"
+    version: ""
+    major_version: "4.15"
+    compute_machine_type: "m5.xlarge" # id:72448
+    proxy: false
+    labeling: false # not yet supported
+    tagging: true # id:72624
+    channel_group: stable
+    zones: "" # id:72456
+    ec2_metadata_http_tokens: ""
+    oidc_config: "un-managed" # id:72493
+    admin_enabled: false # Not yet supported
+    unified_acc_role_path: ""
+# rosa-up-z :: creating a cluster for z-stream upgrade purpose
+- as: rosa-hcp-up-z # id: 72475
+  cluster:
+    cluster_type: rosa-hcp
+    multi_az: true
+    product_id: "rosa"
+    cloud_provider: "aws"
+    region: "us-west-2"
+    ccs: true
+    sts: true
+    byovpc: true
+    private_link: false # Kept to match with classic
+    private: false
+    etcd_encryption: true # id:72483 # id:72807
+    kms_key_arn: true # id:72483 # id:72484 # id:72807
+    fips: false
+    autoscale: false
+    byok: true
+    version_pattern: "z-1"
+    version: ""
+    major_version: "4.15"
+    compute_machine_type: "r5.xlarge" # id:72448
+    proxy: false
+    labeling: false # not yet supported
+    tagging: true # id:72624
+    channel_group: stable
+    zones: "" # id:72456
+    ec2_metadata_http_tokens: ""
+    oidc_config: "managed" # id:72492
+    admin_enabled: false # Not yet supported
+    unified_acc_role_path: ""
     
