OCM-8601 | ci: Refactor TF exec package
Fix some tests

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .terraform*
 /dist/
 terraform.tfstate*
-/tests/**/terraform.tfvars
+/tests/**/terraform.*.tfvars
 /playground/*
 /vendor
 /tests/rhcs_output
