OCM-9274 | ci: Automate ids:72466,72485,72516,72500,74748

--- a/tests/ci/profiles/tf_classic_cluster_profiles.yml
+++ b/tests/ci/profiles/tf_classic_cluster_profiles.yml
@@ -65,6 +65,7 @@ profiles:
     unified_acc_role_path: "/unified/"
 # rosa-sts-sv :: creating Shared-VPC cluster.
 - as: rosa-sts-sv
+  need_specific_config: true
   cluster:
     cluster_type: rosa-classic
     multi_az: true
