--- a/tests/ci/profiles/tf_hcp_cluster_profiles.yml
+++ b/tests/ci/profiles/tf_hcp_cluster_profiles.yml
@@ -119,4 +119,93 @@ profiles:
     oidc_config: "managed" # id:72492
     admin_enabled: false # Not yet supported
     unified_acc_role_path: ""
-    
+
+- as: rosa-hcp-network # id:72466
+  cluster:
+    cluster_type: rosa-hcp
+    multi_az: true
+    product_id: "rosa"
+    cloud_provider: "aws"
+    region: "us-west-2"
+    sts: true
+    byovpc: true
+    private: false
+    etcd_encryption: false
+    kms_key_arn: false
+    fips: false
+    autoscale: false
+    byok: false
+    version_pattern: "latest" # id:72472
+    version: "" # id:72472
+    major_version: "4.15" # id:72472
+    compute_machine_type: "m5.xlarge" # id:72448
+    proxy: false
+    labeling: false # not yet supported
+    tagging: false
+    channel_group: candidate # id:72473
+    zones: "" # id:72456
+    oidc_config: "managed" # id:72493
+    admin_enabled: false # Not yet supported
+    unified_acc_role_path: ""
+    machine_cidr: "10.0.0.0/17" # id:72466
+    service_cidr: "172.50.0.0/20" # id:72466
+    pod_cidr: "10.128.0.0/16" # id:72466
+    host_prefix: 25 # id:72466
+
+- as: rosa-hcp-encryption # id:72485
+  cluster:
+    cluster_type: rosa-hcp
+    multi_az: true
+    product_id: "rosa"
+    cloud_provider: "aws"
+    region: "us-west-2"
+    sts: true
+    byovpc: true
+    private: false
+    etcd_encryption: true
+    kms_key_arn: true
+    different_encryption_keys: true # id:72485
+    fips: false
+    autoscale: false
+    byok: false
+    version_pattern: "latest" # id:72472
+    version: "" # id:72472
+    major_version: "4.15" # id:72472
+    compute_machine_type: "m5.xlarge" # id:72448
+    proxy: false
+    labeling: false # not yet supported
+    tagging: false
+    channel_group: candidate # id:72473
+    zones: "" # id:72456
+    oidc_config: "managed" # id:72493
+    admin_enabled: false # Not yet supported
+    unified_acc_role_path: ""
+
+- as: rosa-hcp-ingress # id:72516
+  cluster:
+    cluster_type: rosa-hcp
+    multi_az: true
+    product_id: "rosa"
+    cloud_provider: "aws"
+    region: "us-west-2"
+    sts: true
+    byovpc: true
+    private: false
+    etcd_encryption: false
+    kms_key_arn: false
+    fips: false
+    autoscale: false
+    byok: false
+    version_pattern: "latest" # id:72472
+    version: "" # id:72472
+    major_version: "4.15" # id:72472
+    compute_machine_type: "m5.xlarge" # id:72448
+    proxy: false
+    labeling: false # not yet supported
+    tagging: false
+    channel_group: candidate # id:72473
+    zones: "" # id:72456
+    oidc_config: "managed" # id:72493
+    admin_enabled: false # Not yet supported
+    unified_acc_role_path: ""
+    ingress_listening_method: "internal" # id:72516
