OCM-12392 | chore: workaround konflux cachi build issue

--- a/.tekton/terraform-provider-rhcs-push.yaml
+++ b/.tekton/terraform-provider-rhcs-push.yaml
@@ -26,6 +26,8 @@ spec:
     value: .
   - name: revision
     value: '{{revision}}'
+  - name: cachi2-log-level
+    value: "debug"
   pipelineSpec:
     finally:
     - name: show-sbom
