--- a/.tekton/terraform-provider-rhcs-push.yaml
+++ b/.tekton/terraform-provider-rhcs-push.yaml
@@ -370,6 +370,30 @@ spec:
           - name: kind
             value: task
         resolver: bundles
+    - name: sast-unicode-check
+      runAfter:
+        - build-container
+      taskRef:
+        params:
+          - name: name
+            value: sast-unicode-check
+          - name: bundle
+            value: quay.io/redhat-appstudio-tekton-catalog/task-sast-unicode-check:0.2@sha256:6e13cc60728344e758c95eb6a53fe509cebf3173da4d4acb868eaa8090a4a5e4
+          - name: kind
+            value: task
+        resolver: bundles
+    - name: sast-snyk-check-oci-ta
+      runAfter:
+        - build-container
+      taskRef:
+        params:
+          - name: name
+            value: sast-snyk-check-oci-ta
+          - name: bundle
+            value: quay.io/redhat-appstudio-tekton-catalog/task-sast-snyk-check-oci-ta:0.4@sha256:fe5e76dee0ada39aa25cbc3714e728d2d6a416d74880358501e8bbcc90981583
+          - name: kind
+            value: task
+        resolver: bundles
     workspaces:
     - name: workspace
     - name: git-auth
