OCM-15301 | ci: Add workspace to sast-unicode-check task

--- a/.tekton/terraform-provider-rhcs-push.yaml
+++ b/.tekton/terraform-provider-rhcs-push.yaml
@@ -382,6 +382,9 @@ spec:
           - name: kind
             value: task
         resolver: bundles
+      workspaces:
+        - name: workspace
+          workspace: workspace
   taskRunTemplate: {}
   workspaces:
   - name: workspace
