--- a/.tekton/terraform-provider-rhcs-push.yaml
+++ b/.tekton/terraform-provider-rhcs-push.yaml
@@ -34,19 +34,11 @@ spec:
         value: $(tasks.clone-repository-oci-ta.results.SOURCE_ARTIFACT)
       - name: IMAGE_URL
         value: $(tasks.build-container.results.IMAGE_URL)
-      taskSpec:
+      taskRef:
         params:
         - description: The Trusted Artifact URI pointing to the artifact with the application source code.
           name: SOURCE_ARTIFACT
           type: string
-      steps:
-        - name: use-trusted-artifact
-          image: quay.io/redhat-appstudio/build-trusted-artifacts:latest@sha256:8391272c4e5011120e9e7fee2c1f339e9405366110bf239dadcbc21e953ce099
-          args:
-            - use
-            - $(params.SOURCE_ARTIFACT)=/var/workdir/source
-      taskRef:
-        params:
         - name: name
           value: show-sbom
         - name: bundle
@@ -54,6 +46,15 @@ spec:
         - name: kind
           value: task
         resolver: bundles
+        steps:
+          - name: use-trusted-artifact
+            image: quay.io/redhat-appstudio/build-trusted-artifacts:latest@sha256:8391272c4e5011120e9e7fee2c1f339e9405366110bf239dadcbc21e953ce099
+            args:
+              - use
+              - $(params.SOURCE_ARTIFACT)=/var/workdir/source
+        volumes:
+          - name: workdir
+            emptyDir: { }
     - name: show-summary
       params:
       - name: pipelinerun-name
