OCM-15301 | ci: Add source_artifact to clone-repository task

--- a/.tekton/terraform-provider-rhcs-push.yaml
+++ b/.tekton/terraform-provider-rhcs-push.yaml
@@ -153,6 +153,8 @@ spec:
         value: $(params.git-url)
       - name: revision
         value: $(params.revision)
+      - name: source_artifact
+        value: $(params.source_artifact)
       runAfter:
       - init
       taskRef:
