--- a/.github/workflows/check-commit-format.yml
+++ b/.github/workflows/check-commit-format.yml
@@ -23,7 +23,7 @@ jobs:
           PR_AUTHOR: ${{ github.event.pull_request.user.login }}
 
         run: |
-          IFS=$'\n' commit_messages=($(git log --pretty=format:"%s" $BASE_SHA...$HEAD_SHA))          
+          IFS=$'\n' commit_messages=($(git log --pretty=format:"%s" $BASE_SHA..$HEAD_SHA))          
           
           # Lists of GitHub users for whom the commit validation should be skipped:
           # * red-hat-konflux[bot] - automatic bot responsible for any change related to
