OCM-18656 | feat: Add external auth providers enablement for ROSA HCP clusters
Add support for enabling external authentication providers during ROSA HCP cluster creation.

  This implementation adds a new boolean field `external_auth_providers_enabled` to the
  rhcs_cluster_rosa_hcp resource that signals intent to create a cluster with external
  authentication provider support enabled.

  Key changes:
  - Add external_auth_providers_enabled field to cluster state and schema
  - Implement cluster creation logic using OCM SDK ExternalAuthConfig
  - Add immutability validation to prevent post-creation changes
  - Add comprehensive subsystem tests for creation and validation scenarios
  - Add e2e test infrastructure with new rosa-hcp-ext-auth profile
  - Add support in profile handler and test utilities

  The field is immutable after cluster creation, following the pattern of other
  infrastructure-level cluster configurations. When enabled, this prepares the cluster
  to accept external authentication provider resources in subsequent configurations.

--- a/tests/ci/profiles/tf_hcp_cluster_profiles.yml
+++ b/tests/ci/profiles/tf_hcp_cluster_profiles.yml
@@ -60,6 +60,32 @@ profiles:
     - "blocked.io"
     - "blocked2.io"
 
+- as: rosa-hcp-ext-auth
+  cluster:
+    cluster_type: rosa-hcp
+    multi_az: true
+    product_id: "rosa"
+    cloud_provider: "aws"
+    region: "us-west-2"
+    sts: true
+    byovpc: true
+    private: false
+    etcd_encryption: false
+    kms_key_arn: false
+    fips: false
+    autoscale: false
+    byok: false
+    compute_machine_type: "m5.xlarge"
+    proxy: false
+    labeling: false
+    tagging: false
+    zones: ""
+    ec2_metadata_http_tokens: "optional"
+    oidc_config: "un-managed"
+    admin_enabled: false
+    unified_acc_role_path: ""
+    external_auth_enabled: true
+
 # Upgrade profiles
 # rosa-up-y :: creating a cluster for y-stream upgrade purpose
 - as: rosa-hcp-up-y # id:72474
