OCM-00000 | ci: Fetch git tags and increase clone depth

--- a/.tekton/terraform-provider-rhcs-push.yaml
+++ b/.tekton/terraform-provider-rhcs-push.yaml
@@ -144,6 +144,10 @@ spec:
         value: $(params.output-image).git
       - name: ociArtifactExpiresAfter
         value: $(params.image-expires-after)
+      - name: depth
+        value: "100"
+      - name: fetchTags
+        value: "true"
       runAfter:
       - init
       taskRef:
